# libshogi

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README
.github/workflows/: cmake.yml
libshogi/: CMakeLists.txt  bishop-piece.cpp  bishop-piece.hpp  bishop-piece.test.cpp  gold-piece.cpp  gold-piece.hpp  gold-piece.test.cpp  king-piece.cpp  king-piece.hpp  king-piece.test.cpp  knight-piece.cpp  knight-piece.hpp  knight-piece.test.cpp  lance-piece.cpp  lance-piece.hpp  lance-piece.test.cpp  pawn-piece.cpp  pawn-piece.hpp  pawn-piece.test.cpp  rook-piece.cpp  rook-piece.hpp  rook-piece.test.cpp  shogi-piece.cpp  shogi-piece.hpp  silver-piece.cpp  silver-piece.hpp  silver-piece.test.cpp
